The Samba-Bugzilla – Bug 13240
samba process hangs on shutdown
Last modified: 2018-02-22 09:54:00 UTC
Created attachment 13920 [details] backtrace hanging samba process after sigterm The samba process can hang on shutdown (SIGTERM). # strace -p 14943 Process 14943 attached futex(0x7f0bc8ec1620, FUTEX_WAIT_PRIVATE, 2, NULL Backtrace attached. Patch from master will follow.
Created attachment 13921 [details] fix for 4.7 (from master)
Karolin, could you please add it to 4.7? Thanks!
(In reply to Andreas Schneider from comment #2) Pushed to autobuild-v4-7-test.
Pushed to v4-7-test. Is this an issue in 4.6 also??
Created attachment 13967 [details] fix for 4.6 > Is this an issue in 4.6 also?? Yes! Patch attached :-)
(In reply to Björn Baumbach from comment #5) Thanks! Pushed to autobuild-v4-6-test.
(In reply to Karolin Seeger from comment #6) Pushed to v4-6-test. Closing out bug report. Thanks!